--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container mt-5 text-center">
     <h1 class="mb-4 welcome-title">680 Phone Repair</h1>
-    <p class="welcome-description">POS</p>
+    <p class="welcome-description">SYSTEM</p>
     <a href="{{ url_for('auth.login') }}" class="btn btn-primary btn-custom">Log in</a>
 </div>
 
