repair part set up

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -99,6 +99,7 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('sales.sales_screen') }}">Counter</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('expense.expenses_page') }}">Expenses</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('supplier.suppliers_page') }}">Suppliers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('repair.list_repairs') }}">Tasks</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
